admin controller error solved

--- a/AirlineManagementSystem/Views/Admin/AdminLogin.cshtml
+++ b/AirlineManagementSystem/Views/Admin/AdminLogin.cshtml
@@ -18,6 +18,7 @@
                         <h4 class="card-title">Admin Login</h4>
                         <p class="card-description">
                             Log in to access the admin dashboard...
+                            <h6 style="color:red">@ViewBag.m</h6>
                         </p>
                         <form class="forms-sample" asp-controller="Admin" asp-action="AdminLogin" method="post">
                             <div class="form-group">
