--- a/AirlineManagementSystem/Views/AeroPlane/Edit.cshtml
+++ b/AirlineManagementSystem/Views/AeroPlane/Edit.cshtml
@@ -39,7 +39,7 @@
                             <div class="form-group">
                                 <div asp-validation-summary="All"></div>
                             </div>
-                            <button type="submit" class="btn btn-primary me-2">Save
+                            <button type="submit" class="btn btn-primary me-2">Update
                             </button>
 
                         </form>
