--- a/AirlineManagementSystem/Views/FlightDetail/Index.cshtml
+++ b/AirlineManagementSystem/Views/FlightDetail/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="col-lg-12 grid-margin stretch-card" >
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Aeroplane Details</h4>
+                        <h4 class="card-title">Flight Details</h4>
                         <p class="card-description">
 
                         </p>
@@ -27,7 +27,7 @@
                                         <th>@Html.DisplayNameFor(model => model.ResDepDate)</th>
                                         <th>@Html.DisplayNameFor(model => model.ResTime)</th>
                                         <th>@Html.DisplayNameFor(model => model.PlaneSeat)</th>
-                                        <th>@Html.DisplayNameFor(model => model.ResDepDate)</th>
+                                        <th>@Html.DisplayNameFor(model => model.ResTicketPrice)</th>
                                         <th>@Html.DisplayNameFor(model => model.ResPlaneType)</th>
                                         <th></th>
                                     </tr>
