--- a/AirlineManagementSystem/Views/Shared/_AdminLoginLayout.cshtml
+++ b/AirlineManagementSystem/Views/Shared/_AdminLoginLayout.cshtml
@@ -32,7 +32,7 @@
             <div class="navbar-menu-wrapper d-flex align-items-top" >
                 <ul class="navbar-nav ">
                     <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
-                        <h1 class="welcome-text"> <span class="text-black ">Airline Management System</span></h1>
+                        <h1 class="welcome-text text-center"> <span class="text-black ">Airline Management System</span></h1>
                         
                     </li>
                 </ul>
