--- a/AirlineManagementSystem/Views/AeroPlane/Create.cshtml
+++ b/AirlineManagementSystem/Views/AeroPlane/Create.cshtml
@@ -39,7 +39,7 @@
                             <div class="form-group">
                                 <div asp-validation-summary="All"></div>
                             </div>
-                            <button type="submit" class="btn btn-primary me-2">Create</button>
+                            <button type="submit" class="btn btn-primary me-2">Add</button>
                             
                         </form>
                     </div>
