--- a/AirlineManagementSystem/Views/FlightDetail/Edit.cshtml
+++ b/AirlineManagementSystem/Views/FlightDetail/Edit.cshtml
@@ -21,16 +21,58 @@
                         </p>
                         <form class="forms-sample" asp-controller="FlightDetail" asp-action="Edit" method="post">
                             <div class="form-group">
-                                <label asp-for="ResFrom">Flight From</label>
-                                <input asp-for="ResFrom" type="text" class="form-control" id="fromflight" placeholder="Fligth from">
+                                <div class="dropdown">
+                                    <label asp-for="ResFrom">Plane Name</label>
+                                    <select asp-for="ResFrom" class="form-control" style="color:black">
+                                        <option class="dropdown-item" style="color:grey" selected>
+                                            Please Select
+                                        </option>
+                                        <option class="dropdown-item">Delhi</option>
+                                        <option class="dropdown-item">Mumbai</option>
+                                        <option class="dropdown-item">Bangluru</option>
+                                        <option class="dropdown-item">Pune</option>
+                                        <option class="dropdown-item">Ahemdabad</option>
+                                        <option class="dropdown-item">Surat</option>
+                                        <option class="dropdown-item">Kerala</option>
+                                        <option class="dropdown-item">Chennai</option>
+                                        <option class="dropdown-item">Hydrabad</option>
+                                        <option class="dropdown-item">Dubai</option>
+                                        <option class="dropdown-item">Canada</option>
+                                        <option class="dropdown-item">Delhi</option>
+                                        <option class="dropdown-item">US</option>
+                                        <option class="dropdown-item">Kolkata</option>
+                                    </select>
+                                </div>
                                 <span asp-validation-for="ResFrom" class="text-danger"></span>
                             </div>
 
+
                             <div class="form-group">
-                                <label asp-for="ResTo">Flight To</label>
-                                <input asp-for="ResTo" class="form-control" id="resto" placeholder="Fligth To">
+                                <div class="dropdown">
+                                    <label asp-for="ResTo">Plane Name</label>
+                                    <select asp-for="ResTo" class="form-control" style="color:black">
+                                        <option class="dropdown-item" style="color:grey" selected>
+                                            Please Select
+                                        </option>
+                                        <option class="dropdown-item">Delhi</option>
+                                        <option class="dropdown-item">Mumbai</option>
+                                        <option class="dropdown-item">Bangluru</option>
+                                        <option class="dropdown-item">Pune</option>
+                                        <option class="dropdown-item">Ahemdabad</option>
+                                        <option class="dropdown-item">Surat</option>
+                                        <option class="dropdown-item">Kerala</option>
+                                        <option class="dropdown-item">Chennai</option>
+                                        <option class="dropdown-item">Hydrabad</option>
+                                        <option class="dropdown-item">Dubai</option>
+                                        <option class="dropdown-item">Canada</option>
+                                        <option class="dropdown-item">Delhi</option>
+                                        <option class="dropdown-item">US</option>
+                                        <option class="dropdown-item">Kolkata</option>
+                                    </select>
+                                </div>
                                 <span asp-validation-for="ResTo" class="text-danger"></span>
                             </div>
+
 
                             <div class="form-group">
                                 <label asp-for="ResDepDate">Departure Date</label>
@@ -66,8 +108,25 @@
                             </div>
 
                             <div class="form-group">
-                                <label asp-for="ResPlaneType">Plane Type</label>
-                                <input asp-for="ResPlaneType" class="form-control" id="planetype" placeholder="Plane Type">
+
+                                <div class="dropdown">
+                                    <label asp-for="ResPlaneType">Plane Name</label>
+                                    <select asp-for="ResPlaneType" class="form-control" style="color:black">
+                                        <option class="dropdown-item" style="color:grey" selected>
+                                            Please Select
+                                        </option>
+                                        <option class="dropdown-item">Jumbo Passanger Jet</option>
+                                        <option class="dropdown-item">Mid-Size Passanger Jet</option>
+                                        <option class="dropdown-item">Light Passanger Jet</option>
+                                        <option class="dropdown-item">Passanger Turboprops</option>
+                                        <option class="dropdown-item">Cargo Airplanes</option>
+                                        <option class="dropdown-item">Light Business Jet</option>
+                                        <option class="dropdown-item">Mid-Size Business Jet</option>
+                                        <option class="dropdown-item">Heavy Business Jet</option>
+
+                                        <option class="">Kolkata</option>
+                                    </select>
+                                </div>
                                 <span asp-validation-for="ResPlaneType" class="text-danger"></span>
                             </div>
 
