--- a/AirlineManagementSystem/Views/Shared/_AdminLayout.cshtml
+++ b/AirlineManagementSystem/Views/Shared/_AdminLayout.cshtml
@@ -358,7 +358,6 @@
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item"> <a class="nav-link" href="@Url.Action("Create","AeroPlane")">Add Details</a></li>
                                 <li class="nav-item"> <a class="nav-link" href="@Url.Action("Index","AeroPlane")">View Details</a></li>
-
                             </ul>
                         </div>
                     </li>
@@ -388,7 +387,7 @@
                         </a>
                         <div class="collapse" id="auth">
                             <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"> <a class="nav-link" href="~/pages/samples/login.html"> Login </a></li>
+                                <li class="nav-item"> <a class="nav-link" href="@Url.Action("UserLogin","User")"> Login </a></li>
                             </ul>
                         </div>
                     </li>
