--- a/AirlineManagementSystem/Views/FlightDetail/Create.cshtml
+++ b/AirlineManagementSystem/Views/FlightDetail/Create.cshtml
@@ -106,7 +106,7 @@
                             <div class="form-group">
                                 
                                 <div class="dropdown">
-                                    <label asp-for="ResPlaneType">Plane Name</label>
+                                    <label asp-for="ResPlaneType">Plane Type</label>
                                     <select asp-for="ResPlaneType" class="form-control" style="color:black">
                                         <option class="dropdown-item" style="color:grey" selected>
                                             Please Select
