--- a/AirlineManagementSystem/Views/FlightDetail/Edit.cshtml
+++ b/AirlineManagementSystem/Views/FlightDetail/Edit.cshtml
@@ -76,13 +76,13 @@
 
                             <div class="form-group">
                                 <label asp-for="ResDepDate">Departure Date</label>
-                                <input asp-for="ResDepDate" class="form-control" id="depdate" placeholder="Departure Date">
+                                <input asp-for="ResDepDate" class="form-control" id="depdate" type="date" placeholder="Departure Date">
                                 <span asp-validation-for="ResDepDate" class="text-danger"></span>
                             </div>
 
                             <div class="form-group">
                                 <label asp-for="ResTime">Time</label>
-                                <input asp-for="ResTime" class="form-control" id="seat" placeholder="Time">
+                                <input asp-for="ResTime" class="form-control" id="seat" type="time" placeholder="Time">
                                 <span asp-validation-for="ResTime" class="text-danger"></span>
                             </div>
 
@@ -110,7 +110,7 @@
                             <div class="form-group">
 
                                 <div class="dropdown">
-                                    <label asp-for="ResPlaneType">Plane Name</label>
+                                    <label asp-for="ResPlaneType">Plane Type</label>
                                     <select asp-for="ResPlaneType" class="form-control" style="color:black">
                                         <option class="dropdown-item" style="color:grey" selected>
                                             Please Select
